update the get endpoint to post endpoint
